--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,9 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
         <title th:text="${title}"/>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
     </head>
     <body>
-         <p th:text="'Привет, ' + ${title} + '!'" />
+        <p th:text="'Привет, ' + ${title} + '!'" />
+        <p>Немного <a href="orders">о нас)</a></p>
     </body>
 </html>
