--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en", xmlns:th="http://www.thymeleaf.org">
+<html lang="ru", xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
         <title>Title</title>
@@ -9,5 +9,12 @@
         <h1>Заказы</h1>
         <p th:text="${title2}"></p>
         <p><a href="/">на главную</a></p>
+        <p>Тело</p>
     </body>
+    <flootter>
+        <p>Нижний этаж</p>
+        <div>
+            &copy; Дивчик
+        </div>
+    </flootter>
 </html>
