--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,13 +7,10 @@
     </head>
     <body>
         <header>
-            <div id="fatherdiv"><!--Блок для отражения названия компании-->
-                <div id="header_name">
-                    <p id="vp_group">PV-Group</p>
-                    <p id="slogan">Ремонт для жизни</p>
-                </div>
-                <div id="header_center">s</div>
-                <div id="header_right">s</div>
+            <div><!--Блок для отражения названия компании-->
+                <p id="header_left">s</p>
+                <h1 id="header_name">PV-Group</h1>
+                <p id="header_right">s</p>
             </div>
             <div>
                 <img src="/jpg/home_title.jpg" width="80%" class="transparent50">
