--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,15 +8,39 @@
     <body>
         <header>
             <div><!--Блок для отражения названия компании-->
-                <p id="header_left">s</p>
+                <div id="header_left">
+                    <p >
+                        г. Москва<br>
+                        улица Космонавтов д.3 к.5<br>
+                        <u>info@pvgroup.ru</u><br>
+                        Ежедневно с 9:00 до 21:00<br>
+                        <b id="number">+7(985)-022-26-23</b>
+                    </p>
+                </div>
                 <h1 id="header_name">PV-Group</h1>
-                <p id="header_right">s</p>
+                <div id="header_right">
+                    <p >
+                        Вход в <br>
+                        <a href="login_user">личны кабинет</a>
+                    </p>
+                </div>
             </div>
             <div>
                 <img src="/jpg/home_title.jpg" width="80%" class="transparent50">
             </div>
         </header>
-        <p th:text="'Привет, ' + ${title} + '!'" />
-        <p>Немного <a href="orders">о нас)</a></p>
+        <!--p th:text="'Привет, ' + ${title} + '!'" /-->
+        <p>Ремонт квартир <a href="">под ключ</a></p>
+        <p><a href="">Однокомнатная</a> квартира</p>
+        <p><a href="">Двухкомнатная</a> квартира</p>
+        <p><a href="">Трехкомнатная</a> квартира</p>
+        <p><a href="">Четырёхкомнатная</a> квартира</p>
+        <p>Ремонт в <a href="">новостройке</a></p>
+        <p>Ремонт <a href="">котеджей</a></p>
+        <p><a href="">Дизайн проект</a> квартиры</p>
+        <p><a href="">Чистовая</a> отделка</p>
+        <p><a href="">Черновая</a> отделка</p>
+        <p>Ремонт <a href="">офисов</a></p>
+        <p>Немного <a href="orders">о нас</a></p>
     </body>
 </html>
