--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -16,7 +16,7 @@
         <footer>
             <p>Нижний этаж</p>
             <div>
-                &copy; Дивчик
+                &copy; Дивчик<br>
                 <del>Эту строку мы удалили</del>
             </div>
         </footer>
